2005-01-27  James Turner  <james@worldforge.org>

	* configure.ac: bump version to 1.3.3 for release
	
	* Eris/MetaQuery.cpp: fix a possible un-initialised variable caught by
	  valgrind.
	
2005-01-26  James Turner  <james@worldforge.org>

    * Eris/BaseConnection.cpp: delete the timeout late, since it's likely to
      be on the stack in the timeout case (which explicitly calls hardDisconnect,
      oops).
      
    * Eris/DeleteLater.cpp, Eris/DeleteLater.h: re-order delete code, so it's
      safe against new delete laters being added to the queue during execution.

2005-01-25  James Turner  <james@worldforge.org>

    * Eris/BaseConnection.cpp, Eris/Connection.cpp: clean up how timeouts
      are handled - they are now reported via the Failure signal on Connection,
      and the Connection state should be reset correctly.

    * Eris/Metaserver.cpp, Eris/MetaQuery.cpp: update for the new Timeout
      handling system, and avoid segfaults when deleting Timed-out queries.
      
    * Eris/DeleteLater.cpp, Eris/DeleteLater.h: add a scheme for delaying the
      delete of arbitrary objects until the flow-of-control returns to the
      Poller. This idea is borrowed from Qt, and similar to autorelease pools
      in Cocoa - it enables slots connected to signals such as Failure to
      request that an object be deleted, without breaking the stack.
      
    * Eris/PollDefault.cpp: poke the deleteLater system, once timeouts have
      been processed.

2005-01-12  James Turner  <james@worldforge.org>

    * Eris/Poll.h, Eris/PollDefault.cpp: change Eris::Poll to have a signal
      object, instead of inheriting SigC::Signal, which causes warnings and
      is generally complex.

    * Eris/PollGlib.h: keep the Glib poller in sync

    * Eris/Connection.cpp, Eris/Metaserver.cpp: update users of the above API

2004-01-12  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Prefer sigc++ 2.0 over 1.2 to keep things a little
	  more consistent.
